--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@ media
 .idea/**/uiDesigner.xml 
 .idea/**/gradle.xml 
 .idea/**/libraries 
-*.iws /out/ 
+*.iws /out/
+.idea/vcs.xml 
 
 # Python # 
 *.py[cod] 
